--- a/Movies.API/appsettings.json
+++ b/Movies.API/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TmbdApiKey": {
+    "api_key": "2ffe153e25788cfac01580dae1018af4"
+  }
 }
