--- a/Movies.Core/Movies.Core.csproj
+++ b/Movies.Core/Movies.Core.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Quartz" Version="3.5.0" />
   </ItemGroup>
 
 </Project>
