--- a/Movies.Service/Movies.Service.csproj
+++ b/Movies.Service/Movies.Service.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="Hosting.Extensions.Quartz" Version="1.1.1" />
+    <PackageReference Include="Quartz.AspNetCore" Version="3.5.0" />
   </ItemGroup>
 
   <ItemGroup>
