--- a/Movies.API/appsettings.json
+++ b/Movies.API/appsettings.json
@@ -14,5 +14,10 @@
   "AllowedHosts": "*",
   "TmbdApiKey": {
     "api_key": "2ffe153e25788cfac01580dae1018af4"
+  },
+  "JWT": {
+    "Issuer": "http://localhost:7129",
+    "Audience": "http://localhost:7129",
+    "Key": "2ffe153e25788cfac01580dae1018af4"
   }
 }
